# rook

./: README.md  check_net.py  check_starscream.py  config.yaml  devices.html  do_install.py  do_install2.py  fix_dpkg.py  fix_final.py  fix_novenv.py  fix_pip.py  fix_pip2.py  fix_pip3.py  fix_pip4.py  fix_pip5.py  fix_service.py  grab_script.py  install_rook.py  pyproject.toml  setup_service.py  start.bat  test_ssh.py  wait_apt.py
rook/: .env.example  __init__.py  __main__.py  mcp_server.py  scheduler.py
rook/cli/: __init__.py  cc_history.py  cc_tmux.py  cloud_sync.py  extractor.py  graph.py
rook/core/: agent.py  anthropic_auth.py  config.py  pipeline.py  router.py
rook/interfaces/: discord.py
rook/memory/: __init__.py  compiler.py  curator.py  extractor.py  facts.py  goals.py  sysinfo.py
rook/modules/: __init__.py  loader.py  remote_workers.py  scheduler_mod.py  web_ui.py
rook/net/: __init__.py  client.py  config.py  discord_node.py  hub.py  ws_transport.py
rook/remote/: __init__.py  bootstrap.py  server.py  worker.py
rook/tools/: agents.py  base.py  channels.py  custom.py  files.py  goals.py  memory.py  memory_kernel.py  modules.py  quota.py  registry.py  remote.py  scheduler_tools.py  shell.py  terminals.py  web.py
rook/web/: index.html
